--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,36 @@
 
 h1 {
   text-align: center;
-  font-size: xx-large;
   color: #a6de08;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+.search-bar {
+  padding: 100px;
+  margin: 50px, 0, 50px, 0;
+}
+
+.input {
+  background-color: #633102;
+  border: none;
+  border-radius: 20px;
+  color: #a6de08;
+}
+
+.input p {
+  color: #a6de08;
+}
+
+.control .button {
+  border-radius: 20px;
+  background-color: #a6de08;
+  color: #633102;
+}
+.button :hover {
+  color: #a6de08;
+  background-color: #633102;
+}
+
+.title {
+  color: #a6de08;
 }
