--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,20 @@
   background-color: #ab7f56;
 }
 
+/* Hero Section */
 h1 {
   text-align: center;
   color: #a6de08;
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+/* Search Bar */
+.slogan {
+  text-align: center;
+  color: #f1efba;
+}
+
 .search-bar {
   padding: 100px;
   margin: 50px, 0, 50px, 0;
@@ -34,13 +42,28 @@ h1 {
   background-color: #633102;
 }
 
+/* Results Header */
 .title {
   color: #a6de08;
 }
 
+/* Recipe Cards */
+.card-content {
+  background-color: #a6de08;
+  padding: 0px;
+  margin: 0, auto;
+}
+
+/* Modal */
+
 .modal {
   background-color: #633102;
 }
+
+.modal-content {
+  background-color: #633102;
+}
+
 .modal h3 {
   text-align: center;
   padding-top: 30px;
