--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Hero Section */
 body {
-  background-color: #ffff;
+  background-color: #ab7f56;
 }
 
 h1 {
@@ -48,8 +48,11 @@ h1 {
 }
 
 /* Recipe Cards */
+.card {
+  background-color: #ab7f56;
+}
 .card-content {
-  background-color: #a6de08;
+  background-color: #633102;
   padding: 0px;
   margin: 0, auto;
 }
@@ -60,6 +63,26 @@ h1 {
 .card-content p {
   text-align: center;
   background-color: #633102;
+}
+
+.recipe-view-btn {
+  margin: 0 auto;
+  display: block;
+  padding: 20px;
+  border-radius: 5px;
+  border: none;
+  color: #633102;
+  background-color: #a6de08;
+  box-shadow: #633102 rgb(0, 0, 0.9);
+}
+
+/* Not Found Message */
+.notFound {
+  color: #f1efba;
+  font-size: xx-large;
+  font-weight: 600;
+  text-align: center;
+  width: 100%;
 }
 
 /* Modal */
